--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -12,15 +12,13 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
 # Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
+# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.7.4
 
 environment:
-  sdk: '>=2.12.2 <3.0.0'
+  sdk: ">=2.12.3 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,38 +29,92 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+#  bitsdojo_window: ^0.1.2
+  bot_toast: ^4.0.1
   cupertino_icons: ^1.0.2
-
+  convert: ^3.0.2
+  connectivity_plus: ^2.3.6+1
+  # connectivity_plus: ^2.3.5
+  data_table_2: ^2.3.5
+  flutter_local_notifications: ^9.7.0
+  # date_format: ^1.0.8
+  datetime_picker_formfield: ^2.0.0
+  device_info_plus: ^4.0.0
+  screen_retriever: ^0.1.3
+#  desktop_window: ^0.4.0
+  dropdown_button2: ^1.5.1
+  equatable: any
+  flutter_lints: ^2.0.0
+  font_awesome_flutter: ^10.1.0
+  flutter_bloc: ^8.0.1
+  file_picker: ^4.6.1
+  google_fonts: ^3.0.1
+  get_it: ^7.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_listener: ^1.2.1
+  http: any
+  intl: ^0.17.0
+  in_app_notification: ^1.1.2
+  json_serializable: ^6.3.1
+  json_annotation: ^4.3.0
+  jwt_decoder: ^2.0.1
+  # my_popup_menu: ^3.0.5
+  provider:
+  path_provider:
+  package_info_plus:
+  quds_popup_menu: ^0.0.1+1
+  shared_preferences: ^2.0.7
+  url_launcher: any
+  # window_manager: ^0.2.5
+  rxdart: ^0.27.5
+  dependencies:
+  system_tray: ^2.0.1
+#  tray_manager: ^0.1.8
+  timezone: ^0.8.0
+  dio: ^4.0.6
+  network_info_plus: ^2.1.4+1
+  win_capture:
+  winhooker: ^0.0.3
+  win_tracker: ^0.0.4
+  flutter_luban: ^0.1.13
+  process_run: ^0.12.3+2
+  minio:
+  flutter_native_timezone: ^2.0.0
+  image: ^3.0.8
+  path: ^1.8.0
+  ffi: ^1.0.0
+  shell: ^2.0.0
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  build_runner:
+  hive_generator:
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
+#flutter_icons:
+#  android: "launcher_icon"
+#  ios: true
+#  image_path: "assets/icon/workstatus.png"
+#  min_sdk_android: 21 # android min sdk min:16, default 21
+#  web:
+#    generate: true
+#    image_path: "path/to/image.png"
+#    background_color: "#hexcode"
+#    theme_color: "#hexcode"
+#  windows:
+#    generate: true
+#    image_path: "path/to/image.png"
+#    icon_size: 48 # min:48, max:256, default: 48
+
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -89,3 +141,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
